Fixed Contrast

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,7 +25,7 @@
 
 .notfound h1{
   font-weight: 500;
-  color: #404d67;
+  color: #181e29;
 }
 
 img {
@@ -40,14 +40,14 @@ h4 {
 }
 
 p {
-  color: #6f7f9f;
+  color: #000000;
   line-height: 1.45;
 }
 
 label {
   display: block;
   font-weight: 500;
-  color: #6f7f9f;
+  color: #404d67;
   margin-bottom: 8px;
   font-size: 16px;
 }
@@ -104,7 +104,7 @@ input[type="email"]:focus {
 }
 
 .input.toggle input:checked + label {
-	background: #4259ED;
+	background: #404d67;
 }
 
 .input.toggle input:checked + label:after {
@@ -116,7 +116,7 @@ input[type="email"]:focus {
 .input.toggle span {
   line-height: 34px;
   font-weight: 500;
-  color: #6f7f9f;
+  color: #404d67;
 }
 
 /* Checkbox */
@@ -155,7 +155,7 @@ input[type="email"]:focus {
   width: 100%;
   cursor: pointer;
   font-weight: 500;
-  color: #6f7f9f;
+  color: #404d67;
 }
 
 /* Box */
@@ -165,7 +165,7 @@ input[type="email"]:focus {
   box-sizing: border-box;
   margin: 3px 11px 3px 1px;
   border: solid 2px; /* Safari */
-  border-color: #6f7f9f;
+  border-color: #404d67;
   border-radius: 2px;
   width: 18px;
   height: 18px;
@@ -220,6 +220,7 @@ input[type="email"]:focus {
 header {
   padding: 25px 0;
   box-shadow: 0 1px 1px rgba(66, 89, 237, 0.11);
+  background-color: #e9e9e9
 }
 
 header .container {
@@ -272,7 +273,7 @@ header .drop-btn .dropdown .more {
   text-align: center;
   padding: 10px 0;
   background: #fbfdff;
-  color: #6f7f9f;
+  color: #404d67;
 }
 
 header .drop-btn .dropdown .more a {
@@ -300,7 +301,7 @@ header .drop-btn .dropdown li a {
   display: inline-block;
   text-align: center;
   text-decoration: none;
-  color: #6f7f9f;
+  color: #404d67;
   width: 100%;
 }
 
@@ -368,7 +369,7 @@ main {
 .main-form .table .line span {
   width: 300px;
   font-weight: 500;
-  color: #6f7f9f;
+  color: #404d67;
 }
 
 .custom__file__input {
@@ -380,12 +381,12 @@ main {
   padding: 12px;
   min-width: 100px;
   font-size: 15px;
-  background-color: #f6f9ff;
-  border: 1.5px solid #dee7f9;
+  background-color: #dadce0;
+  border: 1.5px solid #b2b5b9;
   border-top-right-radius: 2px;
   border-bottom-right-radius: 2px;
   outline: none;
-  color: #6f7f9f;
+  color: #404d67;
   user-select: none;
 }
 
@@ -427,7 +428,7 @@ button {
 
 
 footer {
-  background: #F3F8FF;
+  background: #e9e9e9;
   text-align: center;
   padding: 15px 4%;
 }
